--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,103 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Пинк</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Пинк</title>
+</head>
+<body>
+  <header class="page-header">
+    <div class="logo-wrapper">
+      <a class="logo page-header__logo">
+        <img class="page-header__logo-image" src="http://placehold.it/150x100" width="" height="" alt="Pink">
+      </a>
+    </div>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a>Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="photo.html">Фотографии</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">Конкурс</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">HTML Academy</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="page-header__wrapper">
+      <section class="download">
+        <h2 class="visually-hidden">Загрузка приложения</h2>
+        <div class="download__image">
+          <img src="http://placehold.it/100x150" alt="Screenshot приложения">
+        </div>
+        <div class="download__wrapper">
+          <a href="#" class="download__button">Скачать приложение</a><br>
+          <span class="download__item">Ios</span>
+          <span class="download__item">Android</span>
+          <span class="download__item">Windows</span>
+        </div>
+      </section>
+    </div>
+  </header>
+  <main class="page-main">
+    <h1 class="visually-hidden">Приложение Pink</h1>
+    <section class="offer">
+      <header class="offer__header">
+        <h2 class="visually-hidden">Предложения</h2>
+        <p class="offer__question">Устали от серости мегаполиса?</p>
+        <p class="offer__slogan">Нам есть, что вам предложить!</p>
+      </header>
+      <div class="offer__opportunity">
+        <div class="opportunity offer__item">
+          <h3 class="opportunity__item-head">Поднимает настроение</h3>
+          <p class="opportunity__item-body">Приложение позволит вам победить осеннюю хандру и депрессию буквально в
+            несколько кликов!</p>
+        </div>
+        <div class="opportunity offer__item">
+          <h3 class="opportunity__item-head">Меняет мир вокруг</h3>
+          <p class="opportunity__item-body">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы
+            усилить эффект</p>
+        </div>
+        <div class="opportunity offer__item">
+          <h3 class="opportunity__item-head">Заводит новых друзей</h3>
+          <p class="opportunity__item-body">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите
+            новых</p>
+        </div>
+        <img src="http://placehold.it/100x150" alt="Screenshot приложения">
+      </div>
+    </section>
+    <!-- <section class="">
+          <h2 class="visually-hidden">Отзывы</h2>
+          <div class="">
+            <p class="">Николай Петров</p>
+            <blockquote class="">Это приложение перевернуло мой мир и позволило по-новому
+              взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!</blockquote>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+          </div>
+           Слайдер
+        </section>
 
-  </body>
+      <section class="service">
+          <h2 class="visually-hidden">Пакет услуг</h2>
+          <div class="service__item">
+              <img src="http://placehold.it/450x150" alt="Набор услуг">
+          </div>
+          <div class="service__change">
+
+          </div>
+      </section>
+      <section class="contacts">
+          <h2 class="visually-hidden">Наши контакты</h2>
+          <div class="contacts__map">
+
+          </div>
+      </section> -->
+  </main>
+</body>
 </html>
