--- a/source/form.html
+++ b/source/form.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Пинк</title>
 </head>
+
 <body>
   <header class="page-header">
-    <a class="page-header__logo">
-      <img class="page-header__logo-image" src="http://placehold.it/150x100" width="" height="" alt="Pink">
-    </a>
-    <nav class="main-nav">
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a href="index.html">Главная</a>
-          </li>
-          <li class="site-list__item">
-            <a href="photo.html">Фотографии</a>
-          </li>
-          <li class="site-list__item">
-            <a>Конкурс</a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">HTML Academy</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
     <div class="page-header__wrapper">
-      <section class="competition">
-        <div class="wrapper__image">
-          <h1 class="competition__header">Конкурс на самое безбашенное путешествие с Пинк</h1>
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="http://placehold.it/150x100" width="" height="" alt="Pink">
+      </a>
+      <nav class="main-nav">
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item">
+              <a href="index.html">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a href="photo.html">Фотографии</a>
+            </li>
+            <li class="site-list__item">
+              <a>Конкурс</a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">HTML Academy</a>
+            </li>
+          </ul>
         </div>
-      </section>
+      </nav>
+      <div class="page-header__photo photo">
+        <div class="photo__wrapper-image">
+          <h1 class="page-header__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
+        </div>
+      </div>
     </div>
   </header>
-  <main class="page__main-form">
+  <main class="page-main">
+    <section class="page-main__form">
+      <h2 class="visually-hidden">Форма истории</h2>
+    </section>
   </main>
   <footer class="page-footer">
     <div class="page-footer__social social">
-      <a class="logo footer-logo"></a>
+      <a class="page-footer__social-logo logo "></a>
       <div class="social-links">
-        <a class="social-links__item twitter-link" href="#">Тв</a>
-        <a class="social-links__item facebook-link" href="#">Фэйс</a>
-        <a class="social-links__item video-link" href="#">Видео</a>
+        <a class="social-links__item social-links__item--twitter-link" href="#">Тв</a>
+        <a class="social-links__item social-links__item--facebook-link" href="#">Фэйс</a>
+        <a class="social-links__item social-links__item--video-link" href="#">Видео</a>
       </div>
     </div>
     <div class="page-footer__develop">
@@ -51,4 +56,5 @@
     </div>
   </footer>
 </body>
+
 </html>
