Начинаем методичную разметку личного проекта(Поправил название классов)

--- a/source/form.html
+++ b/source/form.html
@@ -46,9 +46,9 @@
     <div class="page-footer__social social">
       <a class="page-footer__social-logo logo "></a>
       <div class="social-links">
-        <a class="social-links__item social-links__item--twitter-link" href="#">Тв</a>
-        <a class="social-links__item social-links__item--facebook-link" href="#">Фэйс</a>
-        <a class="social-links__item social-links__item--video-link" href="#">Видео</a>
+        <a class="social-links__item social-links__item--tw" href="#">Тв</a>
+        <a class="social-links__item social-links__item--fb" href="#">Фэйс</a>
+        <a class="social-links__item social-links__item--video" href="#">Видео</a>
       </div>
     </div>
     <div class="page-footer__develop">
