--- a/source/photo.html
+++ b/source/photo.html
@@ -44,7 +44,7 @@
           Видите, как не хватает ваших?
         </p>
       </div>
-      <div class="photo-gallery__panorama-wriper">
+      <div class="photo-gallery__list">
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
@@ -169,9 +169,9 @@
     <div class="page-footer__social social">
       <a class="page-footer__social-logo logo "></a>
       <div class="social-links">
-        <a class="social-links__item social-links__item--twitter-link" href="#">Тв</a>
-        <a class="social-links__item social-links__item--facebook-link" href="#">Фэйс</a>
-        <a class="social-links__item social-links__item--video-link" href="#">Видео</a>
+        <a class="social-links__item social-links__item--tw" href="#">Тв</a>
+        <a class="social-links__item social-links__item--fb" href="#">Фэйс</a>
+        <a class="social-links__item social-links__item--video" href="#">Видео</a>
       </div>
     </div>
     <div class="page-footer__develop">
