--- a/source/photo.html
+++ b/source/photo.html
@@ -44,26 +44,23 @@
           Видите, как не хватает ваших?
         </p>
       </div>
-      <div class="photo-gallery__list">
-        <div class="user-photo">
-          <div class="user-photo__item">
-            <div class="user-photo__picture">
-              <p class="user-photo__name">Панорама дня</p>
-              <img class="page-main__logo-image" src="http://placehold.it/150x100" width="" height=""
-                alt="Панорама дня">
-            </div>
-            <div class="user-photo__comment comment comment">
-              <p class="comment__user-name"><b>Анна</b>(5 минут назад)</p>
-              <p class="comment__user-message">Прыгать или нет? напишите в коментарии свой совет и смотрите прямую
-                трансляцию в
-                перископе, задавайте свои вопросы!</p>
-              <span class="comment__user-likes"></span>
-              <span class="comment__user-likes-sum">Нравится:215</span>
-            </div>
+      <div class="user-photo user-photo--panorama">
+        <div class="user-photo__item">
+          <div class="user-photo__picture">
+            <p class="user-photo__name">Панорама дня</p>
+            <img class="page-main__logo-image" src="http://placehold.it/150x100" width="" height="" alt="Панорама дня">
+          </div>
+          <div class="user-photo__comment comment comment">
+            <p class="comment__user-name"><b>Анна</b>(5 минут назад)</p>
+            <p class="comment__user-message">Прыгать или нет? напишите в коментарии свой совет и смотрите прямую
+              трансляцию в
+              перископе, задавайте свои вопросы!</p>
+            <span class="comment__user-likes"></span>
+            <span class="comment__user-likes-sum">Нравится:215</span>
           </div>
         </div>
       </div>
-      <div class="user-photo__wrapper">
+      <div class="page-main__wrapper">
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
