начинаем вёрстку с препроцессором(1)

--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Пинк</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
 </head>
 
 <body>
@@ -35,13 +37,14 @@
       </nav>
     </div>
     <section class="download">
-      <h2 class="visually-hidden">Загрузка приложения</h2>
+      <h2 class="visually-hidden page page-header__title" >Загрузка приложения</h2>
       <div class="download__image">
-        <img src="http://placehold.it/100x150" alt="Screenshot приложения">
+        <img src="img/bg-back-mobile@1x.jpg" alt="Screenshot приложения">
+        <img src="img/iphone-hand-mobile@1x.png" alt="Screenshot приложения">
       </div>
       <div class="download__wrapper">
         <div class="download__link">
-          <a href="#" class="download__button">Скачать приложение</a>
+          <a class="download__button" href="#">Скачать приложение</a>
         </div>
         <div class="download__logo">
           <span class="download__item">Ios</span>
@@ -56,9 +59,9 @@
   </header>
   <main class="page-main">
     <section class="offer">
-      <h1 class="visually-hidden">Приложение Pink</h1>
+      <h1 class="visually-hidden page-header__title">Приложение Pink</h1>
       <header class="offer__header">
-        <h2 class="visually-hidden">Предложения</h2>
+        <h2 class="visually-hidden page-header__title">Предложения</h2>
         <p class="offer__question">Устали от серости мегаполиса?</p>
         <p class="offer__slogan">Нам есть, что вам предложить!</p>
       </header>
@@ -79,7 +82,7 @@
             новых</p>
         </div>
         <div class="offer__image">
-          <img src="http://placehold.it/100x150" alt="Screenshot приложения">
+          <img src="img/iphone-screen-mobile@1x.png" alt="Screenshot приложения">
         </div>
       </div>
     </section>
