--- a/source/form.html
+++ b/source/form.html
@@ -4,15 +4,21 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Пинк</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=cyrillic,cyrillic-ext"
+    rel="stylesheet">
 </head>
 
 <body>
   <header class="page-header">
     <div class="page-header__wrapper">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="http://placehold.it/150x100" width="" height="" alt="Pink">
-      </a>
+      <div class="logo-wrapper">
+        <a class="page-main__logo">
+          <img class="page-main__logo-image" src="http://placehold.it/150x100" width="" height="" alt="Pink">
+        </a>
+      </div>
       <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
