--- a/source/photo.html
+++ b/source/photo.html
@@ -4,15 +4,21 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Пинк</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=cyrillic,cyrillic-ext"
+    rel="stylesheet">
 </head>
 
 <body>
   <header class="page-header">
     <div class="page-header__wrapper">
-      <a class="page-main__logo">
-        <img class="page-main__logo-image" src="http://placehold.it/150x100" width="" height="" alt="Pink">
-      </a>
+      <div class="logo-wrapper">
+        <a class="page-main__logo">
+          <img class="page-main__logo-image" src="http://placehold.it/150x100" width="" height="" alt="Pink">
+        </a>
+      </div>
       <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
@@ -47,16 +53,17 @@
       <div class="user-photo user-photo--panorama">
         <div class="user-photo__item">
           <div class="user-photo__picture">
-            <p class="user-photo__name">Панорама дня</p>
+
             <img class="page-main__logo-image" src="http://placehold.it/150x100" width="" height="" alt="Панорама дня">
+            <p class="user-photo__name">Панорама дня</p>
           </div>
-          <div class="user-photo__comment comment comment">
-            <p class="comment__user-name"><b>Анна</b>(5 минут назад)</p>
+          <div class="user-photo__comment comment">
+            <p class="comment__user-name">Анна <span class="comment__time">(5 минут назад)</span></p>
             <p class="comment__user-message">Прыгать или нет? напишите в коментарии свой совет и смотрите прямую
               трансляцию в
               перископе, задавайте свои вопросы!</p>
             <span class="comment__user-likes"></span>
-            <span class="comment__user-likes-sum">Нравится:215</span>
+            <span class="comment__user-likes-sum">Нравится: 215</span>
           </div>
         </div>
       </div>
@@ -68,10 +75,10 @@
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
-              <p class="comment__user-name"><b>Левон</b>(5 часов назад)</p>
+              <p class="comment__user-name">Левон <span class="comment__time">(5 часов назад)</span></p>
               <p class="comment__user-message">Вчера он на луну летал, сегодня в руки к нам попал.</p>
               <span class="user-likes"></span>
-              <span class="user-likes-sum">Нравится:356</span>
+              <span class="user-likes-sum">Нравится: 356</span>
             </div>
           </div>
         </div>
@@ -82,10 +89,10 @@
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
-              <p class="comment__user-name"><b>Антон</b>(12 часов назад)</p>
+              <p class="comment__user-name">Антон <span class="comment__time">(12 часов назад)</span></p>
               <p class="comment__user-message">Соседи будут рады!</p>
               <span class="user-likes"></span>
-              <span class="user-likes-sum">Нравится:666</span>
+              <span class="user-likes-sum">Нравится: 666</span>
             </div>
           </div>
         </div>
@@ -96,10 +103,10 @@
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
-              <p class="comment__user-name"><b>Борис</b>(20 часов назад)</p>
+              <p class="comment__user-name">Борис <span class="comment__time">(20 часов назад)</span></p>
               <p class="comment__user-message"> Здесь могла быть ваша цитата о высоком и вечном</p>
               <span class="user-likes"></span>
-              <span class="user-likes-sum">Нравится:215</span>
+              <span class="user-likes-sum">Нравится: 215</span>
             </div>
           </div>
         </div>
@@ -110,10 +117,10 @@
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
-              <p class="comment__user-name"><b>Сергей</b>(25 часов назад)</p>
+              <p class="comment__user-name">Сергей <span class="comment__time">(25 часов назад)</span></p>
               <p class="comment__user-message">Самая кубанская в мире!</p>
               <span class="user-likes"></span>
-              <span class="user-likes-sum">Нравится:4</span>
+              <span class="user-likes-sum">Нравится: 4</span>
             </div>
           </div>
         </div>
@@ -124,10 +131,10 @@
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
-              <p class="comment__user-name"><b>Максим</b>(40 часов назад)</p>
+              <p class="comment__user-name">Максим <span class="comment__time">(40 часов назад)</span></p>
               <p class="comment__user-message">Где снег-то?</p>
               <span class="user-likes"></span>
-              <span class="user-likes-sum">Нравится:150</span>
+              <span class="user-likes-sum">Нравится: 150</span>
             </div>
           </div>
         </div>
@@ -138,10 +145,10 @@
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
-              <p class="comment__user-name"><b>Надежда</b>(45 часов назад)</p>
+              <p class="comment__user-name">Надежда <span class="comment__time">(45 часов назад)</span></p>
               <p class="comment__user-message"></p>
               <span class="user-likes">Всем GM и взаимные лайки!</span>
-              <span class="user-likes-sum">Нравится:2560</span>
+              <span class="user-likes-sum">Нравится: 2560</span>
             </div>
           </div>
         </div>
@@ -152,10 +159,10 @@
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
-              <p class="comment__user-name"><b>Анна</b>(5 минут назад)</p>
+              <p class="comment__user-name">Анна <span class="comment__time">(5 минут назад)</span></p>
               <p class="comment__user-message"></p>
               <span class="user-likes"></span>
-              <span class="user-likes-sum">Нравится:215</span>
+              <span class="user-likes-sum">Нравится: 215</span>
             </div>
           </div>
         </div>
