--- a/source/form.html
+++ b/source/form.html
@@ -5,8 +5,6 @@
   <meta charset="utf-8">
   <title>HTML Academy: Пинк</title>
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=cyrillic,cyrillic-ext"
-    rel="stylesheet">
 </head>
 
 <body>
@@ -49,13 +47,13 @@
     </section>
   </main>
   <footer class="page-footer">
-    <div class="page-footer__social social">
-      <a class="page-footer__social-logo logo "></a>
-      <div class="social-links">
-        <a class="social-links__item social-links__item--tw" href="#">Тв</a>
-        <a class="social-links__item social-links__item--fb" href="#">Фэйс</a>
-        <a class="social-links__item social-links__item--video" href="#">Видео</a>
-      </div>
+    <div class="page-footer__logo">
+      <a class="page-footer__logo-image "></a>
+    </div>
+    <div class="page-footer__social-links social-links">
+      <a class="social-links__item social-links__item--tw" href="#">Тв</a>
+      <a class="social-links__item social-links__item--fb" href="#">Фэйс</a>
+      <a class="social-links__item social-links__item--video" href="#">Видео</a>
     </div>
     <div class="page-footer__develop">
       <a class="page-footer__develop-link" href="#">Разработано</a>
