начинаем вёрстку с препроцессором (Корректировка стилей и классов)

--- a/source/form.html
+++ b/source/form.html
@@ -11,8 +11,8 @@
   <header class="page-header">
     <div class="page-header__wrapper">
       <div class="logo-wrapper">
-        <a class="page-main__logo">
-          <img class="page-main__logo-image" src="http://placehold.it/150x100" width="" height="" alt="Pink">
+        <a class="page-header__logo">
+          <img class="page-header__logo-image" src="http://placehold.it/150x100" width="" height="" alt="Pink">
         </a>
       </div>
       <nav class="main-nav">
