--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
       </nav>
     </div>
     <section class="download">
-      <h2 class="visually-hidden page page-header__title" >Загрузка приложения</h2>
+      <h2 class="visually-hidden">Загрузка приложения</h2>
       <div class="download__image">
         <img src="img/bg-back-mobile@1x.jpg" alt="Screenshot приложения">
         <img src="img/iphone-hand-mobile@1x.png" alt="Screenshot приложения">
@@ -58,9 +58,9 @@
   </header>
   <main class="page-main">
     <section class="offer">
-      <h1 class="visually-hidden page-header__title">Приложение Pink</h1>
+      <h1 class="visually-hidden">Приложение Pink</h1>
       <header class="offer__header">
-        <h2 class="visually-hidden page-header__title">Предложения</h2>
+        <h2 class="visually-hidden">Предложения</h2>
         <p class="offer__question">Устали от серости мегаполиса?</p>
         <p class="offer__slogan">Нам есть, что вам предложить!</p>
       </header>
