Начинаем верстать адаптивные сетки

--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Пинк</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
           <img class="" src="http://placehold.it/100x50" width="" height="" alt="Панорама дня">
         </a>
       </div>
-      <button class="main-nav__toggle visually-hidden" type="button">Открыть меню</button>
+      <button class="main-nav__toggle" type="button">Открыть меню</button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
@@ -89,9 +90,6 @@
         </div>
       </div>
       <div class="offer__opportunity">
-        <div class="offer__oportunity-wrapper">
-          <div class="offer__oportunity-image">
-          </div>
           <div class="opportunity">
             <h3 class="opportunity__item-head">Эффект на 24 часа!</h3>
             <p class="opportunity__item-body">Британские ученые провели исследование и доказали,
@@ -99,8 +97,8 @@
             </p>
             <a class="opportunity__link" href="#">Узнать больше об исследовании</a>
           </div>
-        </div>
-        <div class="offer__oportunity-image"></div>
+          <div class="offer__oportunity-image">
+          </div>
       </div>
 
     </section>
