--- a/source/photo.html
+++ b/source/photo.html
@@ -5,58 +5,57 @@
   <meta charset="utf-8">
   <title>HTML Academy: Пинк</title>
   <link rel="stylesheet" href="css/style.css">
-
+  <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
   <header class="page-header">
-    <div class="page-header__wrapper">
+    <nav class="main-nav">
       <div class="logo-wrapper">
         <a class="page-header__logo">
-          <img class="page-header__logo-image" src="http://placehold.it/150x100" width="" height="" alt="Pink">
+          <img class="page-header__logo-image" src="http://placehold.it/100x50" width="" height="" alt="Pink">
         </a>
       </div>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a href="index.html">Главная</a>
-            </li>
-            <li class="site-list__item">
-              <a>Фотографии</a>
-            </li>
-            <li class="site-list__item">
-              <a href="form.html">Конкурс</a>
-            </li>
-            <li class="site-list__item">
-              <a href="#">HTML Academy</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <div class="page-header__photo photo">
-        <div class="photo__wrapper-image">
-          <h1 class="page-header__title">Фотографии пользователей</h1>
-        </div>
+      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a href="index.html">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a>Фотографии</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">Конкурс</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">HTML Academy</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="page-header__photo photo">
+      <div class="photo__wrapper-image">
+        <h1 class="page-header__title">Фотографии пользователей</h1>
       </div>
     </div>
+
   </header>
   <main class="page-main">
     <section class="photo-gallery">
       <div class="photo-gallery__agitation agitation">
-        <p class="agitation__text">Взгяните на фотографии, которые выкладывают пользователи!
+        <p class="agitation__text">Взгяните на фотографии, которые выкладывают пользователи!<br>
           Видите, как не хватает ваших?
         </p>
       </div>
-      <div class="user-photo user-photo--panorama">
+      <div class=" user-photo user-photo--panorama">
         <div class="user-photo__item">
           <div class="user-photo__picture">
 
-            <img class="page-main__logo-image" src="http://placehold.it/150x100" width="" height="" alt="Панорама дня">
+            <img class="page-main__logo-image--panorama" src="img/panorama-mobile@1x.jpg" width="" height="" alt="Панорама дня">
             <p class="user-photo__name">Панорама дня</p>
           </div>
-          <div class="user-photo__comment comment">
+          <div class="user-photo__comment user-photo__comment-panorama">
             <p class="comment__user-name">Анна <span class="comment__time">(5 минут назад)</span></p>
             <p class="comment__user-message">Прыгать или нет? напишите в коментарии свой совет и смотрите прямую
               трансляцию в
@@ -70,7 +69,7 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="http://placehold.it/150x100" width="" height=""
+              <img class="page-main__logo-image" src="/source/img/photo-car-mobile@1x.jpg" width="" height=""
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
@@ -84,7 +83,7 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="http://placehold.it/150x100" width="" height=""
+              <img class="page-main__logo-image" src="/source/img/photo-drumset-mobile@1x.jpg" width="" height=""
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
@@ -98,7 +97,7 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="http://placehold.it/150x100" width="" height=""
+              <img class="page-main__logo-image" src="/source/img/photo-window-mobile@1x.jpg" width="" height=""
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
@@ -112,7 +111,7 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="http://placehold.it/150x100" width="" height=""
+              <img class="page-main__logo-image" src="/source/img/photo-fair-mobile@1x.jpg" width="" height=""
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
@@ -126,7 +125,7 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="http://placehold.it/150x100" width="" height=""
+              <img class="page-main__logo-image" src="/source/img/photo-pov-mobile@1x.jpg" width="" height=""
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
@@ -140,7 +139,7 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="http://placehold.it/150x100" width="" height=""
+              <img class="page-main__logo-image" src="/source/img/photo-wing-mobile@1x.jpg" width="" height=""
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
@@ -151,24 +150,12 @@
             </div>
           </div>
         </div>
-        <div class="user-photo">
-          <div class="user-photo__item">
-            <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="http://placehold.it/150x100" width="" height=""
-                alt="Панорама дня">
-            </div>
-            <div class="user-photo__comment comment">
-              <p class="comment__user-name">Анна <span class="comment__time">(5 минут назад)</span></p>
-              <p class="comment__user-message"></p>
-              <span class="user-likes"></span>
-              <span class="user-likes-sum">Нравится: 215</span>
-            </div>
-          </div>
-        </div>
+
       </div>
     </section>
   </main>
   <footer class="page-footer">
+    <div class="page-footer__wrapper">
     <div class="page-footer__logo">
       <a class="page-footer__logo-image "></a>
     </div>
@@ -180,6 +167,7 @@
     <div class="page-footer__develop">
       <a class="page-footer__develop-link" href="#">Разработано</a>
     </div>
+  </div>
   </footer>
 </body>
 
