Начинаем верстать адаптивные сетки(2)

--- a/source/photo.html
+++ b/source/photo.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Пинк</title>
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -52,7 +53,8 @@
         <div class="user-photo__item">
           <div class="user-photo__picture">
 
-            <img class="page-main__logo-image--panorama" src="img/panorama-mobile@1x.jpg" width="" height="" alt="Панорама дня">
+            <img class="page-main__logo-image--panorama" src="img/panorama-mobile@1x.jpg" width="" height=""
+              alt="Панорама дня">
             <p class="user-photo__name">Панорама дня</p>
           </div>
           <div class="user-photo__comment user-photo__comment-panorama">
@@ -69,7 +71,7 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="/source/img/photo-car-mobile@1x.jpg" width="" height=""
+              <img class="page-main__logo-image" src="../img/photo-car-mobile@1x.jpg" width="" height=""
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
@@ -83,7 +85,7 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="/source/img/photo-drumset-mobile@1x.jpg" width="" height=""
+              <img class="page-main__logo-image" src="../img/photo-drumset-mobile@1x.jpg" width="" height=""
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
@@ -97,7 +99,7 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="/source/img/photo-window-mobile@1x.jpg" width="" height=""
+              <img class="page-main__logo-image" src="../img/photo-window-mobile@1x.jpg" width="" height=""
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
@@ -111,7 +113,7 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="/source/img/photo-fair-mobile@1x.jpg" width="" height=""
+              <img class="page-main__logo-image" src="../img/photo-fair-mobile@1x.jpg" width="" height=""
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
@@ -125,7 +127,7 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="/source/img/photo-pov-mobile@1x.jpg" width="" height=""
+              <img class="page-main__logo-image" src="../img/photo-pov-mobile@1x.jpg" width="" height=""
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
@@ -139,13 +141,13 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="/source/img/photo-wing-mobile@1x.jpg" width="" height=""
+              <img class="page-main__logo-image" src="../img/photo-wing-mobile@1x.jpg" width="" height=""
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
               <p class="comment__user-name">Надежда <span class="comment__time">(45 часов назад)</span></p>
-              <p class="comment__user-message"></p>
-              <span class="user-likes">Всем GM и взаимные лайки!</span>
+              <p class="comment__user-message">Всем GM и взаимные лайки!</p>
+              <span class="user-likes"></span>
               <span class="user-likes-sum">Нравится: 2560</span>
             </div>
           </div>
@@ -156,18 +158,18 @@
   </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-    <div class="page-footer__logo">
-      <a class="page-footer__logo-image "></a>
+      <div class="page-footer__logo">
+        <a class="page-footer__logo-image "></a>
+      </div>
+      <div class="page-footer__social-links social-links">
+        <a class="social-links__item social-links__item--tw" href="#">Тв</a>
+        <a class="social-links__item social-links__item--fb" href="#">Фэйс</a>
+        <a class="social-links__item social-links__item--video" href="#">Видео</a>
+      </div>
+      <div class="page-footer__develop">
+        <a class="page-footer__develop-link" href="#">Разработано</a>
+      </div>
     </div>
-    <div class="page-footer__social-links social-links">
-      <a class="social-links__item social-links__item--tw" href="#">Тв</a>
-      <a class="social-links__item social-links__item--fb" href="#">Фэйс</a>
-      <a class="social-links__item social-links__item--video" href="#">Видео</a>
-    </div>
-    <div class="page-footer__develop">
-      <a class="page-footer__develop-link" href="#">Разработано</a>
-    </div>
-  </div>
   </footer>
 </body>
 
