--- a/source/form.html
+++ b/source/form.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Пинк</title>
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
     <nav class="main-nav">
       <div class="logo-wrapper">
         <a class="page-header__logo">
-          <img class="page-header__logo-image" src="http://placehold.it/150x100" width="" height="" alt="Pink">
+          <img class="page-header__logo-image" src="http://placehold.it/100x50" width="" height="" alt="Pink">
         </a>
       </div>
       <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -54,7 +55,7 @@
       <div class="page-footer__social-links social-links">
         <a class="social-links__item social-links__item--tw" href="#">Тв</a>
         <a class="social-links__item social-links__item--fb" href="#">Фэйс</a>
-        <a class="social-links__item social-links__item--video" href="#">Видео</a>
+        <a class="social-linksgit__item social-links__item--video" href="#">Видео</a>
       </div>
       <div class="page-footer__develop">
         <a class="page-footer__develop-link" href="#">Разработано</a>
