--- a/source/index.html
+++ b/source/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Пинк</title>
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -36,10 +37,9 @@
     </nav>
     <section class="download">
       <h2 class="visually-hidden">Загрузка приложения</h2>
-
       <div class="download__wrapper">
         <div class="download__image">
-          <div class="download__image-phone"></div>
+          <div class="download__image-2"></div>
         </div>
         <div class="download__column">
           <p class="download__agitation">Взгляните на жизнь иначе</p>
@@ -66,41 +66,44 @@
         <p class="offer__question">Устали от серости мегаполиса?</p>
         <p class="offer__slogan">Нам есть, что вам<br>предложить!</p>
       </header>
-
       <div class="offer__opportunity">
         <div class="offer__oportunity-wrapper">
-          <div class="opportunity offer__item">
-            <h3 class="opportunity__item-head">Поднимает настроение</h3>
-            <p class="opportunity__item-body">Приложение позволит вам победить осеннюю хандру и депрессию буквально в
-              несколько кликов!</p>
+          <div class="offer__image">
+            <img src="img/iphone-screen-mobile@1x.png" alt="Screenshot приложения">
           </div>
-          <div class="opportunity offer__item">
-            <h3 class="opportunity__item-head">Меняет мир вокруг</h3>
-            <p class="opportunity__item-body">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы
-              усилить эффект</p>
+          <div class="offer__item">
+            <div class="opportunity offer__item-image-1 ">
+              <h3 class="opportunity__item-head">Поднимает настроение</h3>
+              <p class="opportunity__item-body">Приложение позволит вам победить осеннюю хандру и депрессию буквально в
+                несколько кликов!</p>
+            </div>
+            <div class="opportunity offer__item-image-2 ">
+              <h3 class="opportunity__item-head">Меняет мир вокруг</h3>
+              <p class="opportunity__item-body">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы
+                усилить эффект</p>
+            </div>
+            <div class="opportunity offer__item-image-3">
+              <h3 class="opportunity__item-head">Заводит новых друзей</h3>
+              <p class="opportunity__item-body">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и
+                заводите
+                новых</p>
+            </div>
           </div>
-          <div class="opportunity offer__item">
-            <h3 class="opportunity__item-head">Заводит новых друзей</h3>
-            <p class="opportunity__item-body">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите
-              новых</p>
-          </div>
-        </div>
-        <div class="offer__image">
-          <img src="img/iphone-screen-mobile@1x.png" alt="Screenshot приложения">
         </div>
       </div>
-      <div class="offer__opportunity">
-          <div class="opportunity">
+      <div class="offer__opportunity offer__opportunity--qwerty">
+        <div class="offer__oportunity-wrapper">
+          <div class="offer__oportunity-image">
+          </div>
+          <div class="opportunity opportunity--qwerty">
             <h3 class="opportunity__item-head">Эффект на 24 часа!</h3>
             <p class="opportunity__item-body">Британские ученые провели исследование и доказали,
               что положительный эффект от использования приложения длится целые сутки!
             </p>
             <a class="opportunity__link" href="#">Узнать больше об исследовании</a>
           </div>
-          <div class="offer__oportunity-image">
-          </div>
+        </div>
       </div>
-
     </section>
     <!-- <section class="comment">
           <h2 class="visually-hidden">Отзывы</h2>
