--- a/source/index.html
+++ b/source/index.html
@@ -38,9 +38,9 @@
     <section class="download">
       <h2 class="visually-hidden">Загрузка приложения</h2>
       <div class="download__wrapper">
-        <div class="download__image">
+        <!-- <div class="download__image">
           <div class="download__image-2"></div>
-        </div>
+        </div> -->
         <div class="download__column">
           <p class="download__agitation">Взгляните на жизнь иначе</p>
           <div class="download__link">
