Адаптивне декор элементы index

--- a/source/photo.html
+++ b/source/photo.html
@@ -34,18 +34,17 @@
         </ul>
       </div>
     </nav>
+  </header>
     <div class="page-header__photo photo">
       <div class="photo__wrapper-image">
         <h1 class="page-header__title">Фотографии пользователей</h1>
       </div>
     </div>
-  </header>
+
   <main class="page-main">
     <section class="photo-gallery">
       <div class="photo-gallery__agitation agitation">
-        <p class="agitation__text">Взгяните на фотографии, которые выкладывают<br> пользователи!
-          <!-- <br> -->
-          Видите, как не хватает ваших?
+        <p class="agitation__text">Взгяните на фотографии, которые выкладывают пользователи! <br>Видите, как не хватает ваших?
         </p>
       </div>
       <div class=" user-photo user-photo--panorama">
