--- a/source/form.html
+++ b/source/form.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
+
+
   <header class="page-header">
-    <nav class="main-nav main-nav--opened">
+    <nav class="main-nav main-nav--closed">
       <div class="logo-wrapper">
         <a class="page-header__logo">
           <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" width="" height="" alt="Pink">
