--- a/source/photo.html
+++ b/source/photo.html
@@ -50,8 +50,11 @@
       <div class=" user-photo user-photo--panorama">
         <div class="user-photo__item">
           <div class="user-photo__picture">
-            <img class="page-main__logo-image--panorama" src="img/panorama-mobile@1x.jpg" width="" height=""
-              alt="Панорама дня">
+              <picture>
+                  <source media="(min-width: 960px)" srcset="img/panorama-desktop@1x.jpg">
+                  <source media="(min-width: 660px)" srcset="img/panorama-tablet@1x.jpg">
+                    <img class="page-main__logo-image--panorama" src="img/panorama-mobile@1x.jpg" alt="Панорама дня">
+                </picture>
             <p class="user-photo__name">Панорама дня</p>
           </div>
           <div class="user-photo__comment user-photo__comment-panorama">
@@ -70,8 +73,12 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="../img/photo-car-mobile@1x.jpg" width="" height=""
-                alt="Панорама дня">
+                <picture>
+                    <source media="(min-width: 960px)" srcset="img/photo-car-desktop@1x.jpg">
+                    <source media="(min-width: 660px)" srcset="img/photo-car-tablet@1x.jpg">
+                      <img class="page-main__logo-image" src="img/photo-car-mobile@1x.jpg" width="" height=""
+                      alt="Панорама дня">
+                  </picture>
             </div>
             <div class="user-photo__comment comment">
               <div class="user-photo__comment-wrapper">
@@ -86,8 +93,12 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="../img/photo-drumset-mobile@1x.jpg" width="" height=""
-                alt="Панорама дня">
+                <picture>
+                    <source media="(min-width: 960px)" srcset="img/photo-drumset-desktop@1x.jpg">
+                    <source media="(min-width: 660px)" srcset="img/photo-drumset-tablet@1x.jpg">
+                      <img class="page-main__logo-image" src="img/photo-drumset-mobile@1x.jpg" width="" height=""
+                      alt="Панорама дня">
+                  </picture>
             </div>
             <div class="user-photo__comment comment">
               <div class="user-photo__comment-wrapper">
@@ -102,8 +113,12 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="../img/photo-window-mobile@1x.jpg" width="" height=""
-                alt="Панорама дня">
+                <picture>
+                    <source media="(min-width: 960px)" srcset="img/photo-window-desktop@1x.jpg">
+                    <source media="(min-width: 660px)" srcset="img/photo-window-tablet@1x.jpg">
+                      <img class="page-main__logo-image" src="img/photo-window-mobile@1x.jpg" width="" height=""
+                      alt="Панорама дня">
+                  </picture>
             </div>
             <div class="user-photo__comment comment">
               <div class="user-photo__comment-wrapper">
@@ -118,8 +133,12 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="../img/photo-fair-mobile@1x.jpg" width="" height=""
-                alt="Панорама дня">
+                <picture>
+                    <source media="(min-width: 960px)" srcset="img/photo-fair-desktop@1x.jpg">
+                    <source media="(min-width: 660px)" srcset="img/photo-fair-tablet@1x.jpg">
+                      <img class="page-main__logo-image" src="img/photo-fair-mobile@1x.jpg" width="" height=""
+                      alt="Панорама дня">
+                  </picture>
             </div>
             <div class="user-photo__comment comment">
               <div class="user-photo__comment-wrapper">
@@ -134,8 +153,12 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="../img/photo-pov-mobile@1x.jpg" width="" height=""
-                alt="Панорама дня">
+                <picture>
+                    <source media="(min-width: 960px)" srcset="img/photo-pov-desktop@1x.jpg">
+                    <source media="(min-width: 660px)" srcset="img/photo-pov-tablet@1x.jpg">
+                      <img class="page-main__logo-image" src="img/photo-pov-mobile@1x.jpg" width="" height=""
+                      alt="Панорама дня">
+                    </picture>
             </div>
             <div class="user-photo__comment comment">
               <div class="user-photo__comment-wrapper">
@@ -150,8 +173,12 @@
         <div class="user-photo">
           <div class="user-photo__item">
             <div class="user-photo__picture">
-              <img class="page-main__logo-image" src="../img/photo-wing-mobile@1x.jpg" width="" height=""
-                alt="Панорама дня">
+                <picture>
+                    <source media="(min-width: 960px)" srcset="img/photo-wing-desktop@1x.jpg">
+                    <source media="(min-width: 660px)" srcset="img/photo-wing-tablet@1x.jpg">
+                      <img class="page-main__logo-image" src="img/photo-wing-mobile@1x.jpg" width="" height=""
+                      alt="Панорама дня">
+                    </picture>
             </div>
             <div class="user-photo__comment comment">
               <div class="user-photo__comment-wrapper">
