Адаптивные декор элементы

--- a/source/index.html
+++ b/source/index.html
@@ -10,10 +10,8 @@
 
 <body>
   <div class="content__wrapper">
-    <div class="content__center">
-
-      <header class="page-header">
-        <nav class="main-nav main-nav--closed">
+        <header class="page-header">
+        <nav class="main-nav main-nav--opened">
           <div class="logo-wrapper">
             <a class="logo page-header__logo">
                 <picture>
@@ -60,7 +58,6 @@
           </div>
         </div>
       </section>
-    </div>
   </div>
 
   <main class="page-main">
