--- a/source/form.html
+++ b/source/form.html
@@ -15,7 +15,11 @@
     <nav class="main-nav main-nav--closed">
       <div class="logo-wrapper">
         <a class="page-header__logo">
-          <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" width="" height="" alt="Pink">
+            <picture>
+                <source media="(min-width: 960px)" srcset="img/logo-pink-white-desktop.svg">
+                <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
+                <img src="img/logo-pink-white-mobile.svg" width="226" height="30" alt="Логотип Pink»">
+              </picture>
         </a>
       </div>
       <button class="main-nav__toggle" type="button"></button>
