--- a/source/form.html
+++ b/source/form.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <div class="content__wrapper">
+  <div class="content">
     <header class="page-header">
       <div class="wrapper">
         <nav class="main-nav main-nav--opened">
@@ -43,9 +43,9 @@
         </nav>
       </div>
     </header>
-    <div class="page-header__photo photo">
+    <div class="content__photo photo">
       <div class="photo__wrapper-image">
-        <h1 class="page-header__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
+        <h1 class="content__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
       </div>
     </div>
   </div>
