--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="content__wrapper">
+  <div class="content">
     <header class="page-header">
       <div class="wrapper">
         <nav class="main-nav main-nav--opened">
