--- a/source/photo.html
+++ b/source/photo.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="content__wrapper">
+  <div class="content">
     <header class="page-header">
       <div class="wrapper">
         <nav class="main-nav main-nav--opened">
@@ -42,9 +42,9 @@
         </nav>
       </div>
     </header>
-    <div class="page-header__photo photo">
+    <div class="content__photo photo">
       <div class="photo__wrapper-image">
-        <h1 class="page-header__title">Фотографии пользователей</h1>
+        <h1 class="content__title">Фотографии пользователей</h1>
       </div>
     </div>
   </div>
