--- a/source/index.html
+++ b/source/index.html
@@ -100,7 +100,7 @@
           </div>
         </div>
       </div>
-      <div class="offer__wrapper-time">
+      <div class="offer__wrapper-time time">
         <div class="wrapper">
           <div class="offer__opportunity offer__opportunity--time">
             <div class="opportunity opportunity--time">
