--- a/source/index.html
+++ b/source/index.html
@@ -44,18 +44,20 @@
       <div class="wrapper">
         <h2 class="visually-hidden">Загрузка приложения</h2>
         <div class="download__wrapper">
-          <div class="download__column">
-            <p class="download__agitation">Взгляните<br>на жизнь иначе!</p>
-            <div class="download__link">
-              <a class="download__button" href="#">Скачать приложение</a>
+          <div class="download__wrapper-column">
+            <div class="download__column">
+              <p class="download__agitation">Взгляните<br>на жизнь иначе!</p>
+              <div class="download__link">
+                <a class="download__button" href="#">Скачать приложение</a>
+              </div>
+              <div class="download__logo">
+                <span class="download__item download__item--apple"></span>
+                <span class="download__item download__item--android">
+                </span>
+                <span class="download__item download__item--windows"></span>
+              </div>
+              <p class="download__availability">Доступно для Iphone, iPad,Android, Windows Phone, OS X, Windows 8</p>
             </div>
-            <div class="download__logo">
-              <span class="download__item download__item--apple"></span>
-              <span class="download__item download__item--android">
-              </span>
-              <span class="download__item download__item--windows"></span>
-            </div>
-            <p class="download__availability">Доступно для Iphone, iPad,Android, Windows Phone, OS X, Windows 8</p>
           </div>
         </div>
       </div>
@@ -65,7 +67,7 @@
   <main class="page-main">
     <section class="offer">
       <h1 class="visually-hidden">Приложение Pink</h1>
-      <header class="offer__header content__center">
+      <header class="offer__header">
         <h2 class="visually-hidden">Предложения</h2>
         <p class="offer__question">Устали от серости мегаполиса?</p>
         <p class="offer__slogan">Нам есть, что вам<br><br class="offer__slogan-gap">предложить!</p>
@@ -99,7 +101,7 @@
           </div>
         </div>
       </div>
-      <div class="offer__wrapper--time">
+      <div class="offer__wrapper-time">
         <div class="wrapper">
           <div class="offer__opportunity offer__opportunity--time">
             <div class="opportunity opportunity--time">
@@ -124,32 +126,150 @@
         </div>
       </div>
     </section>
-    <!-- <section class="comment">
-          <h2 class="visually-hidden">Отзывы</h2>
-          <div class="comment__item">
-            <p class="comment__name">Николай Петров</p>
-            <blockquote class="comment__item">Это приложение перевернуло мой мир и позволило по-новому
-              взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!</blockquote>
-
+    <section class="reviews">
+      <div class="reviews__wrapper">
+        <h2 class="visually-hidden">Отзывы пользователей</h2>
+        <div class="reviews__list">
+          <blockquote class="reviews__item">
+            <h3 class="reviews__name">Николай Петров</h3>
+            <p class="reviews__about">25 лет, водитель трамвая</p>
+            <p class="reviews__comment">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные
+              серые вещи! А ещё я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+          </blockquote>
+          <blockquote class="reviews__item reviews__item--hide">
+            <h3 class="reviews__name">Николай Петров</h3>
+            <p class="reviews__about">25 лет, водитель трамвая</p>
+            <p class="reviews__comment">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные
+              серые вещи! А ещё я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+          </blockquote>
+          <blockquote class="reviews__item reviews__item--hide">
+            <h3 class="reviews__name">Николай Петров</h3>
+            <p class="reviews__about">25 лет, водитель трамвая</p>
+            <p class="reviews__comment">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные
+              серые вещи! А ещё я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+          </blockquote>
+          <div class="reviews__nav">
+            <button class="reviews__button reviews__button--prev">
+            </button>
+            <button class="reviews__button reviews__button--next">
+            </button>
           </div>
-           Слайдер
-        </section>
+        </div>
 
-      <section class="service">
-          <h2 class="visually-hidden">Пакет услуг</h2>
-          <div class="service__item">
-              <img src="http://placehold.it/450x150" alt="Набор услуг">
+        <div class="reviews__slider slider">
+          <input class="visually-hidden slider__item" type="radio" id="slider-btn-1" name="button-reviews" checked>
+          <input class="visually-hidden slider__item" type="radio" id="slider-btn-2" name="button-reviews">
+          <input class="visually-hidden slider__item" type="radio" id="slider-btn-3" name="button-reviews">
+          <div class="slider__controls">
+            <label class="slider__controls-item-1" for="slider-btn-1"></label>
+            <label class="slider__controls-item-2" for="slider-btn-2"></label>
+            <label class="slider__controls-item-3" for="slider-btn-3"></label>
           </div>
-          <div class="service__change">
+        </div>
+      </div>
+    </section>
+    <section class="tariff">
+      <div class="tariff__wrapper">
+        <h2 class="visually-hidden">Тариф</h2>
+        <table class="tariff__table">
+          <tr class="tariff__table-head">
+            <td class="visually-hidden tariff__table-sell-hide ">Тарифы</td>
+            <th class="tariff__table-title">База
+              <p class="tariff__cost">1,99 USD</p>
+            </th>
+            <th class="tariff__table-title tariff__table-title-hit">Стандарт
+              <p class="tariff__cost">3,99 USD</p>
+            </th>
+            <th class="tariff__table-title">Анлим
+              <p class="tariff__cost">9,99 USD</p>
+            </th>
+          </tr>
+          <tr class="tariff__table-item tariff__table-item-pink">
+            <td class="tariff__table-parameter tariff__table-sell-hide tariff__table-access">Розовый фильтр</td>
+            <td class="tariff__table-access">
+              <span class="tariff__table-mobil">Розовый
+                фильтр</span>
+              <span class="tariff__table-access--yes"></span>
 
-          </div>
-      </section>
-      <section class="contacts">
-          <h2 class="visually-hidden">Наши контакты</h2>
-          <div class="contacts__map">
+            </td>
+            <td class="tariff__table-access">
+              <span class="tariff__table-mobil">Розовый
+                фильтр</span>
+              <span class="tariff__table-access--yes"></span>
+            </td>
+            <td class="tariff__table-access">
+              <span class="tariff__table-mobil">Розовый
+                фильтр</span>
+              <span class="tariff__table-access--yes"></span>
+            </td>
+          </tr>
+          <tr class="tariff__table-item">
+            <td class="tariff__table-parameter tariff__table-sell-hide tariff__table-access">Смайлики</td>
+            <td class="tariff__table-access">
+              <span class="tariff__table-mobil ">Смайлики</span>
+              <span class="tariff__table-access--no"></span>
+            </td>
+            <td class="tariff__table-access">
+              <span class="tariff__table-mobil">Смайлики</span>
+              <span class="tariff__table-access--yes"></span>
+            </td>
+            <td class="tariff__table-access">
+              <span class="tariff__table-mobil">Смайлики</span>
+              <span class="tariff__table-access--yes"></span>
+            </td>
+          </tr>
+          <tr class="tariff__table-item">
+            <td class="tariff__table-parameter tariff__table-sell-hide tariff__table-access">Комментарии</td>
+            <td class="tariff__table-access">
+              <span class="tariff__table-mobil">Комментарии</span>
+              <span class="tariff__table-access--no"></span>
+            </td>
+            <td class="tariff__table-access"><span class="tariff__table-mobil">Комментарии</span>
+              <span class="tariff__table-access--no"></span>
+            </td>
+            <td class="tariff__table-access"><span class="tariff__table-mobil">Комментарии</span>
+              <span class="tariff__table-access--yes"></span>
+            </td>
+          </tr>
+        </table>
 
+        <div class="tariff__slider slider">
+          <input class="visually-hidden slider__item" type="radio" id="tariff-slider-btn-1" name="button-reviews">
+          <input class="visually-hidden slider__item" type="radio" id="tariff-slider-btn-2" name="button-reviews"
+            checked>
+          <input class="visually-hidden slider__item" type="radio" id="tariff-slider-btn-3" name="button-reviews">
+          <div class="tariff__slider-controls">
+            <label class="tariff__slider-controls-item-1" for="tariff-slider-btn-1"></label>
+            <label class="tariff__slider-controls-item-2" for="tariff-slider-btn-2"></label>
+            <label class="tariff__slider-controls-item-3" for="tariff-slider-btn-3"></label>
           </div>
-      </section> -->
+        </div>
+      </div>
+    </section>
+    <section class="contacts">
+      <div class="contacts__question">
+        Остались вопросы?<br>Свяжитесь с нами!
+      </div>
+      <div class="contacts__info">
+        <div class="contacts__info-item contacts__info--call">
+          <h3>Звоните:</h3>
+          <p>+7 (812) 555-66-66</p>
+        </div>
+        <div class="contacts__info-item contacts__info--mail">
+          <h3>Пишите:</h3>
+          <p>mail@htmlacademy.ru</p>
+        </div>
+        <div class="contacts__info-item contacts__info--address">
+          <h3>Приезжайте в гости:</h3>
+          <p>ул. Большая <br>Конюшенная, 19/8</p>
+        </div>
+      </div>
+    </section>
+    <section class="map">
+      <iframe class="map__size"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d666.9991262146171!2d30.320825443490307!3d59.936471680721354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469631057936999f%3A0xd1e1cd4d43813b33!2sBIBLIOTEKA!5e0!3m2!1sru!2sru!4v1556877715505!5m2!1sru!2sru"
+        frameborder="0" style="border:0" allowfullscreen></iframe>
+    </section>
   </main>
   <footer class="page-footer page-footer--index">
     <div class="page-footer__wrapper ">
@@ -157,7 +277,6 @@
         <a class="page-footer__logo-image ">
           <picture>
             <source media="(min-width: 960px)" srcset="./img/logo-pink-blue-desktop.svg">
-            <source media="(min-width: 660px)" srcset="./img/logotype-blue-tablet.svg">
             <img src="./img/logo-pink-blue-mobile.svg" alt="Логотип Pink»">
           </picture>
         </a>
