--- a/source/photo.html
+++ b/source/photo.html
@@ -42,7 +42,7 @@
     </header>
     <div class="content__photo photo">
       <div class="photo__wrapper-image">
-        <h1 class="content__title">Фотографии пользователей</h1>
+        <h1 class="content__title">Фотографии<br>пользователей</h1>
       </div>
     </div>
   </div>
@@ -57,10 +57,11 @@
       <div class=" user-photo user-photo--panorama">
         <div class="user-photo__item">
           <div class="user-photo__picture">
-            <picture>
+            <picture class="pan">
               <source media="(min-width: 960px)" srcset="img/panorama-desktop@1x.jpg">
               <source media="(min-width: 660px)" srcset="img/panorama-tablet@1x.jpg">
-              <img class="page-main__logo-image--panorama" src="img/panorama-mobile@1x.jpg" alt="Панорама дня">
+              <img class="page-main__image-panorama" src="img/panorama-mobile@1x.jpg"
+                srcset="img/panorama-mobile@1x.jpg 1x img/panorama-mobile@2x.jpg 2x" alt="Панорама дня">
             </picture>
             <p class="user-photo__name">Панорама дня</p>
           </div>
@@ -201,13 +202,80 @@
         </div>
       </div>
     </section>
+    <section class="form-posting">
+      <p class="form-posting__title">Затмите их всех!<br>Выкладывайте все, что накопилось в телефоне!</p>
+      <div class="form-posting__wrapper">
+        <form class="form-posting__form" method="post">
+          <div class="form-posting__photo">
+            <picture>
+              <source media="(min-width: 960px)"
+                srcset="img/photo-road-desktop@1x.jpg 1x, img/photo-road-desktop@2x.jpg 2x">
+              <source media="(min-width: 660px)"
+                srcset="img/photo-road-tablet@1x.jpg 1x, img/photo-road-tablet@2x.jpg 2x">
+              <img class="form-posting__img" src="img/photo-road-mobile@1x.jpg" srcset="img/photo-road-mobile@2x.jpg 2x"
+                alt="Выбранная фотография для редактирования.">
+            </picture>
+          </div>
+          <div class="form-posting__post">
+            <div class="form-posting__list-wrapper">
+              <ul class="form-posting__list">
+                <li class="form-posting__item">
+                  <button class="form-posting__crop">
+                    <svg class="form-posting__item-icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                      width="48px" height="48px"
+                      viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
+                      <path fill="none" d="M0,0h48v48H0V0z" />
+                      <path
+                        d="M34,30h4V14c0-2.21-1.79-4-4-4H18v4h16V30z M14,34V2h-4v8H2v4h8v20c0,2.21,1.79,4,4,4h20v8h4v-8h8v-4H14z" />
+                    </svg>
+                  </button>
+                  <div class="form-posting__control">
+                    <div class="form-posting__control--crop"></div>
+                  </div>
+                </li>
+                <li class="form-posting__item">
+                  <button class="form-posting__fill">
+                    <svg class="form-posting__item-icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="48px"
+                      viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
+                      <path fill="none" d="M0,0h48v48H0V0z" />
+                      <path
+                        d="M33.12,17.88L15.24,0l-2.83,2.83l4.76,4.76L6.88,17.88c-1.17,1.17-1.17,3.07,0,4.24l11,11C18.46,33.71,19.23,34,20,34 s1.54-0.29,2.12-0.88l11-11C34.29,20.95,34.29,19.05,33.12,17.88z M10.41,20L20,10.42L29.59,20H10.41z M38,23c0,0-4,4.33-4,7 c0,2.21,1.79,4,4,4s4-1.79,4-4C42,27.33,38,23,38,23z" />
+                      <rect y="40" width="48" height="3" />
+                    </svg>
+                  </button>
+                  <div class="form-posting__control form-posting__control--fill"></div>
+                </li>
+                <li class="form-posting__item">
+                  <button class="form-posting__contrast">
+                    <svg class="form-posting__item-icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="48px"
+                      viewBox="-35.422 -7.96 31.92 31.92" enable-background="new -35.422 -7.96 31.92 31.92"
+                      xml:space="preserve">
+                      <path fill="#231F20"
+                        d="M-19.462-3.96c6.595,0,11.96,5.365,11.96,11.96s-5.365,11.96-11.96,11.96S-31.422,14.595-31.422,8 S-26.057-3.96-19.462-3.96 M-19.462-7.96c-8.814,0-15.96,7.145-15.96,15.96c0,8.813,7.146,15.96,15.96,15.96S-3.502,16.813-3.502,8 C-3.502-0.815-10.648-7.96-19.462-7.96L-19.462-7.96z" />
+                      <path d="M-19.462,16.331c4.706,0,8.52-3.813,8.52-8.52c0-4.705-3.813-8.519-8.52-8.519" />
+                    </svg>
+                  </button>
+                  <div class="form-posting__control form-posting__control--contrast"></div>
+                </li>
+              </ul>
+            </div>
+            <div class="form-posting__button-wrapper">
+              <button class="form-posting__button-post" type="submit">Запостить</button>
+              <button class="form-posting__button-cancel" type="reset">Отмена</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </section>
   </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
       <div class="page-footer__logo">
         <picture>
           <source media="(min-width: 960px)" srcset="./img/logo-pink-blue-desktop.svg">
-          <source media="(min-width: 660px)" srcset="./img/logotype-blue-tablet.svg">
           <img src="./img/logo-pink-blue-mobile.svg" alt="Логотип Pink»">
         </picture>
       </div>
